<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <ProgressBar
        android:id="@+id/progressBar_create"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="InvalidId" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/username_create"
           android:hint="@string/usernameCreate_text"
            android:layout_marginBottom="14dp"
            />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:id="@+id/emailAddress_create"
            android:hint="@string/email_text"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:id="@+id/password_create"
            android:hint="@string/Password_text"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/CreateAcc_Button_create"
            android:text="@string/CreateAcc_Text"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            android:background="@android:color/transparent"/>



    </LinearLayout>

</LinearLayout>