<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".postJournalActivity">

    <ImageView
        android:id="@+id/post_imageView"
        android:layout_width="462dp"
        android:layout_height="347dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:src="@drawable/download"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/post_currentUserText"
        android:layout_width="163dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/gowri_prasath"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_add_imageView" />

    <TextView
        android:id="@+id/post_dateText"
        android:layout_width="68dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/today"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/post_titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_currentUserText"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/post_add_imageView"
        android:layout_width="111dp"
        android:layout_height="93dp"
        app:layout_constraintBottom_toBottomOf="@+id/post_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/post_imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/post_titleText"
        android:layout_width="371dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_imageView"
        app:layout_constraintVertical_bias="0.031" />

    <EditText
        android:id="@+id/post_thoughts"
        android:layout_width="351dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/your_thoughts"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_titleText"
        app:layout_constraintVertical_bias="0.013"
        tools:ignore="MissingConstraints" />

<!--    <EditText-->
<!--        android:id="@+id/post_thoughts"-->
<!--        android:layout_width="396dp"-->
<!--        android:layout_height="104dp"-->
<!--        android:layout_marginTop="24dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/your_thoughts"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/post_imageView"-->
<!--        app:layout_constraintVertical_bias="0.134" />-->

    <Button
        android:id="@+id/post_saveButton"
        android:layout_width="415dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="Save"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_thoughts"
        app:layout_constraintVertical_bias="0.76" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="62dp"
        android:layout_height="60dp"
        android:layout_marginBottom="28dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/post_saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.125"
        tools:ignore="UnknownId" />
</androidx.constraintlayout.widget.ConstraintLayout>